--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Build Application
         run: npm run build && npm run build:ssr
 
-      - name: Log in to Docker Hub
+      - name: Log in to GitHub Container Hub
         uses: docker/login-action@v1
         with:
           registry: ${{ env.REGISTRY }}
@@ -48,5 +48,6 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: |
+            type=match,pattern=console-(.*),group=1
           labels: ${{ steps.meta.outputs.labels }}
