--- a/scf/Dockerfile
+++ b/scf/Dockerfile
@@ -1,6 +1,6 @@
 FROM ccr.ccs.tencentyun.com/scf-repo/runtime-node12:latest
 
-COPY ../dist/console /app
+COPY dist/console /app
 WORKDIR /app
 
 EXPOSE 9000
