--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,17 +69,18 @@ jobs:
             ${{ env.QCLOUD_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
             ${{ env.QCLOUD_REGISTRY }}/${{ env.IMAGE_NAME }}:${{steps.meta.outputs.version}}
 
-      - name: Build and push QCLOUD SCF image
-        uses: docker/build-push-action@v2
-        with:
-          context: ./scf
-          push: true
-          tags: ${{ env.QCLOUD_REGISTRY }}/${{ env.IMAGE_NAME }}:${{steps.meta.outputs.version}}-scf
-          labels: ${{ steps.meta.outputs.labels }}
-
       - name: Setup Kubectl & Patch Deployment
         uses: steebchen/kubectl@v2.0.0
         with:
           config: ${{ secrets.KUBE_CONFIG }}
           version: v1.23.1
           command: patch deployment console-deploy --patch "$(sed "s/\${tag}/${{steps.meta.outputs.version}}/" < ./config/patch.yml)"
+
+      - name: Build and push QCLOUD SCF image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: { context }/Dockerfile-scf
+          push: true
+          tags: ${{ env.QCLOUD_REGISTRY }}/${{ env.IMAGE_NAME }}:${{steps.meta.outputs.version}}-scf
+          labels: ${{ steps.meta.outputs.labels }}
