--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,6 @@ name: release
 
 on:
   release:
-    types: [ published ]
     tags:
       - '!console-*'
 
@@ -19,7 +18,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
-          registry-url: https://npm.pkg.github.com/
+          registry-url: https://registry.npmjs.org
 
       - name: Install Dependency
         run: npm install
@@ -30,6 +29,6 @@ jobs:
         run: |
           cd ./dist/common
           npm version ${{github.ref_name}}
-          npm publish
+          npm publish --access=public
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
