--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,9 @@ name: deploy
 
 on:
   release:
+    types: [ published ]
     tags:
-      - 'console-*'
+      - console-*
 
 env:
   REGISTRY: ghcr.io
@@ -11,7 +12,7 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build_and_release:
+  build_and_deploy:
     runs-on: ubuntu-latest
     permissions:
       packages: write
