--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -29,3 +29,6 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           path-to-lcov: ./coverage/common/report-lcov/lcov.info
+
+      - name: Push Fossas
+        run: "curl -H 'Cache-Control: no-cache' https://raw.githubusercontent.com/fossas/fossa-cli/master/install.sh | sudo bash"
