--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,10 +2,11 @@ name: release
 
 on:
   release:
-    types: [ published ]
+    types:
+      - published
+  push:
     tags:
       - v*
-      - '!console-*'
 
 jobs:
   release:
