--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,10 +2,11 @@ name: deploy
 
 on:
   release:
-    types: [ published ]
+    types:
+      - published
+  push:
     tags:
       - console-*
-      - '!v*'
 
 env:
   REGISTRY: ghcr.io
@@ -13,7 +14,7 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build_and_deploy:
+  deploy:
     runs-on: ubuntu-latest
     permissions:
       packages: write
