--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: deploy
+name: 自动部署
 
 on:
   push:
@@ -17,34 +17,35 @@ jobs:
       packages: write
       contents: read
     steps:
-      - name: Check out the repo
+      - name: 检出
         uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v2
+      - name: 安装 Node
+        uses: actions/setup-node@v2
         with:
           node-version: '14'
 
-      - name: Install Dependency
+      - name: 安装依赖
         run: npm install
 
-      - name: Build Application
+      - name: 构建应用与SSR服务
         run: npm run build && npm run build:ssr
 
-      - name: Log in to GitHub Container Hub
+      - name: 登录 GitHub Container Hub
         uses: docker/login-action@v1
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Log in to TCR
+      - name: 登录 TCR
         uses: docker/login-action@v1
         with:
           registry: ${{ env.QCLOUD_REGISTRY }}
           username: ${{ secrets.QCLOUD_USERNAME }}
           password: ${{ secrets.QCLOUD_PASSWORD }}
 
-      - name: Extract metadata (tags, labels) for Docker
+      - name: 解析容器镜像标签与标记
         id: meta
         uses: docker/metadata-action@v3
         with:
@@ -52,7 +53,7 @@ jobs:
           tags: |
             type=match,pattern=console-(.*),group=1
 
-      - name: Build and push Docker image
+      - name: 构建并推送容器镜像
         uses: docker/build-push-action@v2
         with:
           context: .
@@ -60,7 +61,7 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
-      - name: Push Image to multiple registries
+      - name: 容器镜像复制到 TCR
         uses: akhilerm/tag-push-action@v2.0.0
         with:
           src: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{steps.meta.outputs.version}}
@@ -68,7 +69,7 @@ jobs:
             ${{ env.QCLOUD_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
             ${{ env.QCLOUD_REGISTRY }}/${{ env.IMAGE_NAME }}:${{steps.meta.outputs.version}}
 
-      - name: Setup Kubectl & Patch Deployment
+      - name: Kubernetes 滚动更新
         uses: steebchen/kubectl@v2.0.0
         with:
           config: ${{ secrets.KUBE_CONFIG }}
