--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,17 +5,9 @@ on:
     tags:
       - console-*
 
-env:
-  REGISTRY: ghcr.io
-  QCLOUD_REGISTRY: ccr.ccs.tencentyun.com
-  IMAGE_NAME: ${{ github.repository }}
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    permissions:
-      packages: write
-      contents: read
     steps:
       - name: 检出
         uses: actions/checkout@v2
@@ -28,50 +20,6 @@ jobs:
       - name: 安装依赖
         run: npm install
 
-      - name: 构建应用与SSR服务
-        run: npm run build && npm run build:ssr
+      - name: 构建应用
+        run: npm run build
 
-      - name: 登录 GitHub Container Hub
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: 登录 TCR
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ env.QCLOUD_REGISTRY }}
-          username: ${{ secrets.QCLOUD_USERNAME }}
-          password: ${{ secrets.QCLOUD_PASSWORD }}
-
-      - name: 解析容器镜像标签与标记
-        id: meta
-        uses: docker/metadata-action@v3
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=match,pattern=console-(.*),group=1
-
-      - name: 构建并推送容器镜像
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-
-      - name: 容器镜像复制到 TCR
-        uses: akhilerm/tag-push-action@v2.0.0
-        with:
-          src: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{steps.meta.outputs.version}}
-          dst: |
-            ${{ env.QCLOUD_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-            ${{ env.QCLOUD_REGISTRY }}/${{ env.IMAGE_NAME }}:${{steps.meta.outputs.version}}
-
-      - name: Kubernetes 滚动更新
-        uses: steebchen/kubectl@v2.0.0
-        with:
-          config: ${{ secrets.KUBE_CONFIG }}
-          version: v1.23.1
-          command: patch deployment console-deploy --patch "$(sed "s/\${tag}/${{steps.meta.outputs.version}}/" < ./config/patch.yml)"
