--- a/package.json
+++ b/package.json
@@ -1,24 +1,15 @@
 {
   "name": "console",
-  "description": "",
+  "description": "基于 Antd 集成的 Angular 组件库，低代码前端的实验项目",
   "version": "0.0.0-NOT-USED",
   "scripts": {
     "start": "ng s --host 0.0.0.0 --disable-host-check",
-    "dev:common": "ng b common --watch",
-    "dev:components": "ng b components --watch",
-    "dev:settings": "ng b settings --watch",
-    "dev:resources": "ng b resources --watch",
-    "dev:center": "ng b center --watch",
+    "build": "ng b --configuration production",
     "build:common": "ng b common --configuration production",
     "build:components": "ng b components --configuration production",
     "build:settings": "ng b settings --configuration production",
     "build:resources": "ng b resources --configuration production",
     "build:center": "ng b center --configuration production",
-    "build": "ng b --configuration production",
-    "dev:ssr": "ng run console:serve-ssr",
-    "build:ssr": "ng run console:server",
-    "serve:ssr": "node dist/console/server/main.js",
-    "prerender": "ng run console:prerender",
     "test": "ng t common --code-coverage --no-watch --no-progress --browsers=ChromeHeadlessCI",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -32,12 +23,9 @@
     "@angular/forms": "~13.2.0",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
-    "@angular/platform-server": "~13.2.0",
     "@angular/router": "~13.2.0",
     "@angular/service-worker": "~13.2.0",
-    "@nguniversal/express-engine": "^13.0.2",
     "@ngx-pwa/local-storage": "^13.0.2",
-    "express": "^4.15.2",
     "monaco-editor": "^0.31.1",
     "ng-zorro-antd": "^13.0.1",
     "rxjs": "~7.4.0",
@@ -53,11 +41,8 @@
     "@angular-eslint/template-parser": "~13.0.1",
     "@angular/cli": "~13.2.0",
     "@angular/compiler-cli": "~13.2.0",
-    "@nguniversal/builders": "^13.0.2",
-    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
-    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
     "eslint": "^8.2.0",
