--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,10 @@ jobs:
               sessiontoken: ""
             buckets:
               - name: ${{ secrets.COS_BUCKET }}
-                alias: ${{ secrets.COS_BUCKET }}
+                alias: default
+                region: ap-guangzhou
+              - name: ${{ secrets.COS_BUCKET }}
+                alias: accelerate
                 region: accelerate
           EOF
 
@@ -45,14 +48,6 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '14'
-
-      - uses: actions/cache@v2
-        name: 缓存依赖
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
 
       - name: 安装依赖
         run: npm install
@@ -62,5 +57,5 @@ jobs:
 
       - name: 静态部署
         run: |
-          ~/.cache/coscli rm cos://${{ secrets.COS_BUCKET }}/ -r -f -c ~/.cache/cos.yml
-          ~/.cache/coscli cp ./dist/console/ cos://${{ secrets.COS_BUCKET }}/ -r -c ~/.cache/cos.yml
+          ~/.cache/coscli rm cos://default/ -r -f -c ~/.cache/cos.yml
+          ~/.cache/coscli cp ./dist/console/ cos://accelerate/ -r -c ~/.cache/cos.yml
