--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,10 +62,10 @@ jobs:
 
       - name: 静态文件打包
         run: |
-          zip -r console-{{ github.ref_name }}.zip ./dist/console/
+          zip -r console-${{ github.ref_name }}.zip ./dist/console/
 
       - name: 版本发布
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: console-{{ github.ref_name }}.zip
+          files: console-${{ github.ref_name }}.zip
