--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,9 @@
       "@weplanx/components": ["projects/components/public-api.ts"],
       "@weplanx/components/checkbox": ["projects/components/checkbox/public-api.ts"],
       "@weplanx/components/upload": ["projects/components/upload/public-api.ts"],
+      "@weplanx/components/header": ["projects/components/header/public-api.ts"],
       "@weplanx/components/media": ["projects/components/media/public-api.ts"],
+      "@weplanx/components/nav": ["projects/components/nav/public-api.ts"],
       "@weplanx/components/table": ["projects/components/table/public-api.ts"],
       "@weplanx/components/form": ["projects/components/form/public-api.ts"],
       "@weplanx/components/richtext": ["projects/components/richtext/public-api.ts"],
