--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,8 +33,7 @@
       "@weplanx/components/form": ["projects/components/form/public-api.ts"],
       "@weplanx/components/richtext": ["projects/components/richtext/public-api.ts"],
       "@weplanx/settings": ["projects/settings/src/public-api.ts"],
-      "@weplanx/center": ["projects/center/src/public-api.ts"],
-      "@weplanx/resources": ["projects/resources/src/public-api.ts"]
+      "@weplanx/center": ["projects/center/src/public-api.ts"]
     }
   },
   "angularCompilerOptions": {
