--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,28 +23,16 @@ jobs:
 
       - name: 构建 Angular 库
         run: |
-          npm run build:common
-          npm run build:components
-          npm run build:settings
-          npm run build:resources
-          npm run build:center
+          npm run build:ng
+          npm run build:intgr
 
       - name: 发布至 NPM
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
         run: |
-          cd ./dist/common
+          cd ./dist/angular
           npm version ${{github.ref_name}}
           npm publish --access=public
-          cd ../components
-          npm version ${{github.ref_name}}
-          npm publish --access=public
-          cd ../settings
-          npm version ${{github.ref_name}}
-          npm publish --access=public
-          cd ../resources
-          npm version ${{github.ref_name}}
-          npm publish --access=public
-          cd ../center
+          cd ../integrate
           npm version ${{github.ref_name}}
           npm publish --access=public
