--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~13.2.0",
     "@angular/service-worker": "~13.2.0",
     "@ngx-pwa/local-storage": "^13.0.2",
+    "date-fns": "^2.28.0",
     "monaco-editor": "^0.31.1",
     "ng-zorro-antd": "^13.1.0",
     "rxjs": "~7.4.0",
