--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "@angular/service-worker": "~13.2.0",
+    "@antv/g2plot": "^2.4.17",
     "@ngx-pwa/local-storage": "^13.0.2",
     "date-fns": "^2.28.0",
     "monaco-editor": "^0.31.1",
