更新：完善引用类型显示与修改

--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,8 @@
             "styles": ["./node_modules/ng-zorro-antd/ng-zorro-antd.min.css", "src/styles.scss"],
             "scripts": [],
             "serviceWorker": true,
-            "ngswConfigPath": "ngsw-config.json"
+            "ngswConfigPath": "ngsw-config.json",
+            "allowedCommonJsDependencies": ["size-sensor", "pdfast"]
           },
           "configurations": {
             "production": {
