--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,7 +66,8 @@ jobs:
           secret_id: ${{ secrets.COS_SECRETID }}
           secret_key: ${{ secrets.COS_SECRETKEY }}
           region: ${{ secrets.TENCENT_PRODUCT_REGION }}
-          commands: cdn PurgePathCache --cli-unfold-argument --Paths https://console.kainonly.com/ --FlushType delete
+          commands: |
+            cdn PurgePathCache --cli-unfold-argument --region ap-guangzhou --Paths https://console.kainonly.com/ --FlushType delete
           output_format: json
 
       - name: 静态文件打包
