--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,7 @@
             "scripts": [],
             "serviceWorker": true,
             "ngswConfigPath": "ngsw-config.json",
-            "allowedCommonJsDependencies": ["size-sensor", "pdfast"]
+            "allowedCommonJsDependencies": ["size-sensor", "pdfast", "validator"]
           },
           "configurations": {
             "production": {
