--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,9 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "cli": {
     "analytics": false,
-    "defaultCollection": "@angular-eslint/schematics"
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   },
   "version": 1,
   "newProjectRoot": "projects",
@@ -167,6 +169,5 @@
         }
       }
     }
-  },
-  "defaultProject": "console"
+  }
 }
