--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "~13.3.11",
+    "@angular/animations": "^14.2.0",
     "@angular/cdk": "^13.3.0",
-    "@angular/common": "~13.3.11",
-    "@angular/compiler": "~13.3.11",
-    "@angular/core": "~13.3.11",
-    "@angular/forms": "~13.3.11",
-    "@angular/platform-browser": "~13.3.11",
-    "@angular/platform-browser-dynamic": "~13.3.11",
-    "@angular/router": "~13.3.11",
-    "@angular/service-worker": "~13.3.11",
+    "@angular/common": "^14.2.0",
+    "@angular/compiler": "^14.2.0",
+    "@angular/core": "^14.2.0",
+    "@angular/forms": "^14.2.0",
+    "@angular/platform-browser": "^14.2.0",
+    "@angular/platform-browser-dynamic": "^14.2.0",
+    "@angular/router": "^14.2.0",
+    "@angular/service-worker": "^14.2.0",
     "@antv/g2plot": "^2.4.17",
     "@antv/x6": "^1.32.3",
     "@ngx-pwa/local-storage": "^13.0.2",
@@ -34,14 +34,14 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.8",
+    "@angular-devkit/build-angular": "^14.2.1",
     "@angular-eslint/builder": "~13.5.0",
     "@angular-eslint/eslint-plugin": "~13.5.0",
     "@angular-eslint/eslint-plugin-template": "~13.5.0",
     "@angular-eslint/schematics": "~13.5.0",
     "@angular-eslint/template-parser": "~13.5.0",
-    "@angular/cli": "~13.3.8",
-    "@angular/compiler-cli": "~13.3.11",
+    "@angular/cli": "^14.2.1",
+    "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "@types/validator": "^13.7.3",
@@ -57,8 +57,8 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "ng-packagr": "^13.1.2",
-    "prettier": "^2.3.2",
-    "typescript": "~4.5.4"
+    "ng-packagr": "^14.3.0",
+    "prettier": "^2.4.0",
+    "typescript": "~4.8.2"
   }
 }
