--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@angular/animations": "^14.2.0",
-    "@angular/cdk": "^13.3.0",
+    "@angular/cdk": "^14.2.0",
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
@@ -35,19 +35,19 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.1",
-    "@angular-eslint/builder": "~13.5.0",
-    "@angular-eslint/eslint-plugin": "~13.5.0",
-    "@angular-eslint/eslint-plugin-template": "~13.5.0",
-    "@angular-eslint/schematics": "~13.5.0",
-    "@angular-eslint/template-parser": "~13.5.0",
+    "@angular-eslint/builder": "~14.0.3",
+    "@angular-eslint/eslint-plugin": "~14.0.3",
+    "@angular-eslint/eslint-plugin-template": "~14.0.3",
+    "@angular-eslint/schematics": "~14.0.3",
+    "@angular-eslint/template-parser": "~14.0.3",
     "@angular/cli": "^14.2.1",
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "@types/validator": "^13.7.3",
-    "@typescript-eslint/eslint-plugin": "5.3.0",
-    "@typescript-eslint/parser": "5.3.0",
-    "eslint": "^8.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "2.25.2",
     "eslint-plugin-prettier": "^3.4.0",
