--- a/apps/console/project.json
+++ b/apps/console/project.json
@@ -5,7 +5,9 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/console",
         "index": "apps/console/src/index.html",
@@ -13,8 +15,14 @@
         "polyfills": "apps/console/src/polyfills.ts",
         "tsConfig": "apps/console/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
-        "assets": ["apps/console/src/favicon.ico", "apps/console/src/assets"],
-        "styles": ["apps/console/src/styles.scss"],
+        "assets": [
+          "apps/console/src/favicon.ico",
+          "apps/console/src/assets"
+        ],
+        "styles": [
+          "./node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
+          "apps/console/src/styles.scss"
+        ],
         "scripts": []
       },
       "configurations": {
@@ -71,17 +79,28 @@
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "options": {
-        "lintFilePatterns": ["apps/console/**/*.ts", "apps/console/**/*.html"]
+        "lintFilePatterns": [
+          "apps/console/**/*.ts",
+          "apps/console/**/*.html"
+        ]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/console"],
+      "outputs": [
+        "coverage/apps/console"
+      ],
       "options": {
         "jestConfig": "apps/console/jest.config.ts",
         "passWithNoTests": true
       }
     }
   },
-  "tags": []
+  "tags": [],
+  "cli": {
+    "analytics": false,
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
+  }
 }
